--- a/_site.yml
+++ b/_site.yml
@@ -13,7 +13,7 @@ navbar:
       icon: fa-leaf
       href: CV.html
 output:
-  mikedown::ucsb:
-    toc: TRUE
-    number_sections: FALSE
-    code_folding: "hide"
+  html_document:
+    theme: lumen
+    includes:
+      after_body: footer.html
