--- a/_site.yml
+++ b/_site.yml
@@ -12,10 +12,8 @@ navbar:
     - text: "Resume"
       icon: fa-leaf
       href: CV.html
-    - text: "CPO"
-      icon: fa-leaf
-      href: eda.html
 output:
   mikedown::ucsb:
     toc: TRUE
     number_sections: FALSE
+    code_folding: "hide"
